--- a/src/WebShop.WebUI/appsettings.json
+++ b/src/WebShop.WebUI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server=(localdb)\\MSSQLLocalDB;Database=WebShop;Trusted_Connection=True;"
+  }
 }
