Add AccountDataService and NonQueryService

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
-//Project
+//SRC
 .vs/
 src/WebShop.WebUI/obj/
 src/WebShop.Infrastructure/obj/
 src/WebShop.Domain/obj/
 src/WebShop.Application/obj/
+src/WebShop.WebUI/bin/
+src/WebShop.Infrastructure/bin/
+src/WebShop.Domain/bin/
+src/WebShop.Application/bin/
 //Tests
 tests/WebShop.WebUI.Tests/obj/
 tests/WebShop.Infrastructure.Tests/obj/
 tests/WebShop.Domain.Tests/obj/
 tests/WebShop.Application.Tests/obj/
+tests/WebShop.WebUI.Tests/bin/
+tests/WebShop.Infrastructure.Tests/bin/
+tests/WebShop.Domain.Tests/bin/
+tests/WebShop.Application.Tests/bin/
