--- a/src/WebShop.Domain/WebShop.Domain.csproj
+++ b/src/WebShop.Domain/WebShop.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
   </ItemGroup>
 
 </Project>
