--- a/src/WebShop.Infrastructure/WebShop.Infrastructure.csproj
+++ b/src/WebShop.Infrastructure/WebShop.Infrastructure.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\WebShop.Domain\WebShop.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
