--- a/src/WebShop.WebUI/WebShop.WebUI.csproj
+++ b/src/WebShop.WebUI/WebShop.WebUI.csproj
@@ -5,14 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebShop.Application\WebShop.Application.csproj" />
     <ProjectReference Include="..\WebShop.Infrastructure\WebShop.Infrastructure.csproj" />
   </ItemGroup>
 
