--- a/src/WebShop.Application/WebShop.Application.csproj
+++ b/src/WebShop.Application/WebShop.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.10" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.1" />
   </ItemGroup>
 
