--- a/src/WebShop.WebUI/appsettings.json
+++ b/src/WebShop.WebUI/appsettings.json
@@ -3,11 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "SqlConnection": "Server=(localdb)\\MSSQLLocalDB;Database=WebShop;Trusted_Connection=True;"
+    "SqlConnection": "Server=(localdb)\\MSSQLLocalDB;Database=WebShop;Trusted_Connection=True;"
   }
 }
